syntax = "proto3";

package playground.v1;

service PlaygroundService {
  rpc GetFeature(GetFeatureRequest) returns (GetFeatureResponse) {}
}

message GetFeatureRequest {
  string name = 1;
}

message GetFeatureResponse {
  string name = 1;
}